# std

./: README.md  pyproject.toml
.github/actions/install-env /: action.yaml
.github/workflows/: pylint.yml  ruff.yml
.github/workflows /: pytest.yaml
std/: __init__.py  cmp.pyx  iter.pyx  marker.pyx  option.py  option.pyx  result.pyx
tests/: test_cmp.py  test_prelude.py
