[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stdpy"
version = "0.0.0"
description = "std"
readme = "README.md"
authors = [
    { name = "Rin Arakaki" }
]
license = { file = "LICENSE" }
classifiers = [
    'Programming Language :: Python',
]
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0"
]

[project.urls]
Repository = "http://github.com/rnarkk/std.py"

[tool.setuptools.packages.find]
include = [
    "std"
]
